--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ input::-webkit-inner-spin-button {
 /* banner start */
 .pa-banner{
 	padding:200px 0px 185px;
-	background-image: url(../images/banner.jpg);
+	background-image: url(../images/Banner03.jpg);
 	background-position: left;
 	background-repeat: no-repeat;
 	background-size: cover;
